[package]
name = "nu_plugin_nuts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-nats = "0.39.0"
nu-plugin = "0.103.0"
nu-utils = "0.103.0"
nu-protocol = { version = "0.103.0", features = ["plugin"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tokio-util = "0.7.14"
log = "0.4.27"
simple_logger = "5.0.0"
env_logger = "0.11.7"
